2007-08-21 Mathieu Blondel <mblondel@cvs.gnome.org>

    * README: updated with newest features.

2007-08-21 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/net/dict.rb: Fixed bug when db provided to show_db doesn't
    exist.
    * lib/fantasdic/ui/add_dictionary_dialog.rb: Authenticate for show_server
    and show_db if login and password provided.

2007-08-21 Mathieu Blondel <mblondel@cvs.gnome.org>

    * AUTHORS: Translators names moved...
    * po/AUTHORS: ...here.
    * po/README: Ask translators to add their name to po/AUTHORS.
    * lib/fantasdic/pre-setup.rb: Generate lib/fantasdic/authors.rb and
    lib/fantasdic/translators.rb from AUTHORS and po/AUTHORS. This way, authors
    and translators names are centralized in one place.
    * lib/fantasdic/ui/about_dialog.rb: Display translators for relevant locale
    only.
    * lib/fantasdic.rb: Try to load lib/fantasdic/authors.rb and
    lib/fantasdic/translators.rb if present.
    * data/fantasdic/glade/preferences_dialog.glade: Increase a little bit page
    width.

2007-08-21 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Trim leading and ending spaces in the
    searched word.

2007-08-21 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/utils.rb: Added Gtk::TreeModel#n_rows alias.
    * lib/fantasdic/ui/main_app.rb: Display the number of matches in the
    treeview instead of the total number of matches.
    * data/fantasdic/glade/main_app.glade: Sets "Matches" as the default string
    for the sidepane.

2007-08-21 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Make the ResultTextView grab the focus when
    definitions are added.

2007-08-21 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Some code cleanup (kill_lookup_thread).

2007-08-19 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic.rb: Added a HAVE_CONSOLE constant. This constant must be